add Quest explanations before challenge

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,4 +1,4 @@
 {% extends 'base.html.twig' %}
 {% block body %}
-    <h1>Bienvenue sur {{website}}!</h1>
+    <h1>Bienvenue sur Wild Series!</h1>
 {% endblock %}
