--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -1,4 +1,19 @@
 {% extends 'base.html.twig' %}
+{% block title %}Série #{{ program.id }}{% endblock %}
+
 {% block body %}
-    <h1>Program {{ id }}</h1>
+
+    <div class="media">
+        <img class="align-self-start mr-3" src="{{program.poster}}" alt="{{ program.title }} poster">
+        <div class="media-body">
+            <h1 class="mt-0">{{ program.title }}</h1>
+            <p>{{ program.summary }}</p>
+            <p>Catégorie : {{ program.category.name }}</p>
+        </div>
+    </div>
+
+    <a href="{{ path('program_index') }}">
+        Retour à la liste des programmes
+    </a>
+
 {% endblock %}
