--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -12,6 +12,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="/programs/">Programs</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/categories/">Categories</a>
+            </li>
         </ul>
     </div>
 </nav>
