--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,7 @@
         {{ encore_entry_link_tags('app') }}
         {% block stylesheets %}
         {% endblock %}
-        <link rel="icon" href="{{ asset('build/images/coeur.png') }}" />
+        <link rel="icon" href="{{ asset('build/images/favicon_wildseries.png') }}" alt = "favicon" />
     </head>
     <body>
     <header>
