--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -7,7 +7,7 @@
     {% for program in programs %}
         <div>
             <h2>{{ program.id }} : <a href="{{ path("program_show", { id: program.id }) }}">{{ program.title|capitalize }}</a></h2>
-            <p>{{program.summary}}</p>
+            <p>{{program.synopsis}}</p>
         </div>
     {% else %}
         Aucune série trouvée.
