--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -7,7 +7,7 @@
     {% for program in programs %}
         <div>
             <h2>{{ loop.index }} / {{ program.title }} - Catégorie : {{ program.category.name }}</h2>
-            <p>{{ program.summary }}</p>
+            <p>{{ program.synopsis }}</p>
             {# Lien vers la fiche de la série : #}
             <a href="{{ path("program_show", { id: program.id }) }}">Voir la fiche</a>
         </div>
