--- a/templates/program/season_show.html.twig
+++ b/templates/program/season_show.html.twig
@@ -9,7 +9,7 @@
     <ul>
         {% for episode in season.episodes %}
         <li>
-            Episode {{ episode.number }}: {{ episode.title }}
+            <a href = "{{ path("program_episode_show", {"programId" : program.id, "seasonId" : season.id, "episodeId" : episode.id} ) }}"> Episode {{ episode.number }}: {{ episode.title }}</a>
         </li>
         {% endfor %}
     </ul>
