Q11 - Gardez la form!

--- a/templates/category/index.html.twig
+++ b/templates/category/index.html.twig
@@ -12,6 +12,7 @@
         Aucune catégorie trouvée.
     {% endfor %}
 
+    <!--<h3><a href="{# {{ path('category_new') }}#}">Ajouter une catégorie</a></h3>--><!--Q11 ajouter en tant qu'administrateur, ne pas afficher de lien pour l'utilistateur -->
     <a href="{{ path('app_index') }}">
         Retour à l'accueil
     </a>
