--- a/templates/category/new.html.twig
+++ b/templates/category/new.html.twig
@@ -2,7 +2,8 @@
 
 {% block body %}
     <h1> Add a category </h1>
-    {{ form_start(form) }}
+    {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
+    {{ form_errors(form) }}
     {{ form_widget(form) }}
     <input type="submit" value="Add category">
     {{ form_end(form) }}
