--- a/templates/program/new.html.twig
+++ b/templates/program/new.html.twig
@@ -2,7 +2,8 @@
 
 {% block body %}
     <h1>Add a program</h1>
-    {{ form_start(form) }}
+    {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
+    {{ form_errors(form) }}
     {{ form_widget(form) }}
     <input type='submit' value='Add program'>
     {{ form_end(form) }}
