--- a/templates/episode/_form.html.twig
+++ b/templates/episode/_form.html.twig
@@ -1,4 +1,6 @@
+<div style="width:50%">
 {{ form_start(form) }}
     {{ form_widget(form) }}
     <button class="btn">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
+</div>
