--- a/templates/episode/show.html.twig
+++ b/templates/episode/show.html.twig
@@ -19,7 +19,20 @@
                 <th>Number</th>
                 <td>{{ episode.number }}</td>
             </tr>
+            <tr><table class="table">
+        <tbody>
             <tr>
+                <th>Id</th>
+                <td>{{ episode.id }}</td>
+            </tr>
+            <tr>
+                <th>Title</th>
+                <td>{{ episode.title }}</td>
+            </tr>
+            <tr>
+                <th>Number</th>
+                <td>{{ episode.number }}</td>
+            </tr>
                 <th>Synopsis</th>
                 <td>{{ episode.synopsis }}</td>
             </tr>
