--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -14,7 +14,14 @@
             {%for season in seasons %}
                 <a href="{{ path("program_season_show", {"program_id" : program.id, "season_id": season.id }) }}"><p>Saison {{ season.number}}</p></a>
             {% endfor %}
-
+            <strong>Acteurs :</strong>
+            <ul>
+                {% for actor in program.actors %}
+                    <li><a href="{{ path("actor_show", {id: actor.id}) }}">{{ actor.name}} </a></li>
+                {% else %}
+                    <li>Aucun acteur pour cette série</li>
+                {% endfor %}
+            </ul>
         </div>
     </div>
 
