--- a/templates/episode/index.html.twig
+++ b/templates/episode/index.html.twig
@@ -30,8 +30,8 @@
 
 
                 <td>
-                    <a href="{{ path('episode_show', {'id': episode.id}) }}">show</a>
-                    <a href="{{ path('episode_edit', {'id': episode.id}) }}">edit</a>
+                    <a href="{{ path('episode_show', {'episode': episode.slug}) }}">show</a>
+                    <a href="{{ path('episode_edit', {'episode': episode.slug}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
