--- a/templates/episode/show.html.twig
+++ b/templates/episode/show.html.twig
@@ -41,7 +41,7 @@
 
     <a href="{{ path('episode_index') }}">back to list</a>
 
-    <a href="{{ path('episode_edit', {'id': episode.id}) }}">edit</a>
+    <a href="{{ path('episode_edit', {'episode': episode.slug}) }}">edit</a>
 
     {{ include('episode/_delete_form.html.twig') }}
 {% endblock %}
