correct typos and add video on readme

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -10,11 +10,18 @@
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="/categories/">Categories</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="/programs/">Séries</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/categories/">Categories</a>
+                <a class="nav-link" href="/season/">Saisons</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/episode/">Episodes</a>
+            </li>
+
         </ul>
     </div>
 </nav>
